--- a/views/home.html
+++ b/views/home.html
@@ -48,8 +48,8 @@
                 </ul>
 
                 <ul class="lista-inferior">
-                        <li><a href="">Crea tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
-                        <li><a href="">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
+                        <li><a href="/register">Crea tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
+                        <li><a href="/login">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
                         <li><a href="">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
                 </ul>
 
