--- a/views/login.html
+++ b/views/login.html
@@ -14,38 +14,38 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
-    <header class="main-header">
-        <div class="main-header-top-bar">
-            <div class="main-header-top-bar-busqueda">
-                <a href="/"><img src="/images/logo-mercado-liebre.svg" class="logo" alt="mercado liebre"></a>
-                <div class="busqueda">
-                    <input type="search" placeholder="Buscar productos, marca...">
-                    <button>
-                        <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
-                    </button>
-                </div> 
+    <header>
+        <div class="main_header_top_bar">
+            <div class="top_bar">
+                <a href="/"><img src="/images/logo-mercado-liebre.svg" class="logo" alt="Logo mercado liebre"></a>
+            <div class="busqueda">
+                <input class="search" type="search" placeholder="Buscar productos, marcas...">
+                <button class="button">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </button>   
             </div>
-            <h2 class="copy-header">
-                <i class="fa-solid fa-hand-holding-dollar"></i>
-                Comprá en cuotas y sin tarjeta de crédito.
-            </h2>
         </div>
-        <div class="burger-button">
+       <h2 class="titulo_compra">
+        <i class="fa-solid fa-hand-holding-dollar"></i>
+        Comprá en cuotas y sin tarjeta de crédito.
+       </h2>
+        </div>
+            <nav class="nav-bar">
+                <ul class="lista-superior">
+                        <li><a href="">Ofertas</a></li>
+                        <li><a href="">Tiendas oficiales</a></li>
+                        <li><a href="">Vender</a></li>
+                        <li><a href="">Ayuda</a></li>
+                </ul>
+                <ul class="lista-inferior">
+                        <li><a href="/register">Crea tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
+                        <li><a href="/login">Ingresa <i class="fa-solid fa-right-to-bracket"></i></a></li>
+                        <li><a href="">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
+                </ul>
+            </nav>
+        <div class="burger-menu">
             <i class="fas fa-bars"></i>
         </div>
-        <nav class="main-nav-bar">
-            <ul class="left-nav-bar">
-                <li><a href="">Ofertas</a></li>
-                <li><a href="">Tiendas Oficiales</a></li>
-                <li><a href="">Vender</a></li>
-                <li><a href="">Ayuda</a></li>
-            </ul>
-            <ul class="right-nav-bar">
-                <li><a href="/register">Creá tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
-                <li><a href="/login">Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
-                <li><a href="">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
-            </ul>
-        </nav>
     </header>
     <main>
         <div class="form-container">
