--- a/views/register.html
+++ b/views/register.html
@@ -163,7 +163,7 @@
                     <h4>Seguridad, de principio a fin</h4>
                     <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>          
         </article>
-        <span>Copyright © 1999-2020 MercadoLiebre S.R.L.</span>
+        <p class="copy">Copyright ©️ 1999-2022 MercadoLiebre S.R.L.</p>
     </footer>
 </body>
 </html>
